--- a/vistocar_inspect/src/pages/login/login.scss
+++ b/vistocar_inspect/src/pages/login/login.scss
@@ -1,7 +1,17 @@
 .image-center {
   display: flex;
-  display: -webkit-flex; /* Garante compatibilidade com navegador Safari. */
+  display: -webkit-flex;
 
   justify-content: center;
   align-items: center;
+}
+
+.item-md.item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner,
+.item-md.item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner {
+  border-bottom-color: transparent;
+  box-shadow: inset 0 -1px 0 0 #dedede;
+}
+
+.font-default {
+  font-size: 16px;
 }
