inpsect page pictures profile

--- a/vistocar_inspect/src/pages/inspect/inspect.scss
+++ b/vistocar_inspect/src/pages/inspect/inspect.scss
@@ -1,3 +1,12 @@
 .segment-md .segment-button {
   text-transform: none;
 }
+
+.background-no-images {
+  height: 135px;
+  background-color: #d3d3d3;
+}
+
+.text-no-images {
+  text-align: center;
+}
