--- a/vistocar_inspect/src/pages/consult-inspect/consult-inspect.scss
+++ b/vistocar_inspect/src/pages/consult-inspect/consult-inspect.scss
@@ -1,3 +1,11 @@
 .item-md .item-button {
   font-size: 1.0em !important;
 }
+
+.green-badge {
+  color: #4DB6AC;
+}
+
+.blue-badge {
+  color: #488aff;;
+}
