--- a/vistocar_inspect/src/pages/consult-inspect/consult-inspect.scss
+++ b/vistocar_inspect/src/pages/consult-inspect/consult-inspect.scss
@@ -2,10 +2,14 @@
   font-size: 1.0em !important;
 }
 
-.green-badge {
-  color: #4DB6AC;
-}
+.ios, .md, .wp {
 
-.blue-badge {
-  color: #488aff;;
+  .green-badge {
+    background-color: #00b28e;
+  }
+
+  .blue-badge {
+    background-color: #0c9abe;
+  }
+
 }
